--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "deploy": "yarn build && surge public -d 'https://psychotic-sister.surge.sh'",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "bootstrap": "^4.4.1",
     "gatsby": "^2.19.5",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-manifest": "^2.2.38",
@@ -27,17 +27,12 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^5.2.1",
-    "react-reveal": "^1.2.2",
-    "react-tilt": "^0.1.4",
-    "uuid": "^3.4.0"
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
     "babel-eslint": "^10.0.3",
     "eslint": "^7.6.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -52,8 +47,7 @@
     "lint-staged": "^10.0.2",
     "postcss-selector-parser": "^6.0.2",
     "prettier": "^1.19.1",
-    "tailwindcss": "^1.4.6",
-    "twin.macro": "^1.4.1"
+    "tailwindcss": "^1.4.6"
   },
   "repository": {
     "type": "git",
