--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "deploy:production": "gh-pages -d public -b master -r git@github.com:vitormalencar/vitormalencar.github.io",
+    "deploy:production": "gatsby build && gh-pages -d public -b master -r git@github.com:vitormalencar/vitormalencar.github.io",
     "deploy:staging": "yarn build && surge public -d 'https://psychotic-sister.surge.sh'",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
