--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-dom": "^17.0.1",
     "react-github-btn": "^1.1.1",
     "react-helmet": "^6.1.0",
-    "react-reveal": "^1.2.2"
+    "react-reveal": "^1.2.2",
+    "use-sound": "^1.0.2"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
