--- a/package.json
+++ b/package.json
@@ -17,16 +17,16 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "gatsby": "^4.8.1",
+    "gatsby": "^4.9.0",
     "gatsby-image": "^3.11.0",
+    "gatsby-plugin-image": "^2.8.1",
     "gatsby-plugin-cname": "^1.0.0",
-    "gatsby-plugin-manifest": "^4.8.1",
-    "gatsby-plugin-offline": "^5.8.1",
-    "gatsby-plugin-postcss": "^5.8.0",
-    "gatsby-plugin-react-helmet": "^5.8.0",
-    "gatsby-plugin-sharp": "^4.8.1",
-    "gatsby-source-filesystem": "^4.8.1",
-    "gatsby-transformer-sharp": "^4.8.0",
+    "gatsby-plugin-manifest": "^4.9.0",
+    "gatsby-plugin-offline": "^5.9.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
+    "gatsby-plugin-sharp": "^4.9.0",
+    "gatsby-source-filesystem": "^4.9.0",
+    "gatsby-transformer-sharp": "^4.9.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -36,6 +36,11 @@
     "use-sound": "^4.0.1"
   },
   "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-helmet": "^6.1.5",
+    "autoprefixer": "^10.4.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^8.10.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -45,13 +50,16 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.2",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "gatsby-plugin-emotion": "^7.8.0",
+    "gatsby-plugin-emotion": "^7.9.0",
+    "gatsby-plugin-postcss": "^5.9.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.4",
+    "postcss": "^8.4.7",
     "postcss-selector-parser": "^6.0.9",
     "prettier": "^2.5.1",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.6.2"
   },
   "repository": {
     "type": "git",
